[package]
name = "herd"
version = "0.9.0"
authors = ["Jacob Clark <jacob.jh.clark@googlemail.com>"]
edition = "2021"

[dependencies]
hyper = { version = "*", features = ["full"] }
nix = "*"
threadpool = "*"
clap = { version = "*", features = ["derive"] }
yaml-rust = "*"
tokio = { version = "*", features = ["macros"] }
async-std = { version = "1", features = ["attributes", "tokio1"] }
